--- a/src/ui/internal-audit/src/app/views/private/security/change-password/change-password.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/change-password/change-password.component.html
@@ -53,14 +53,13 @@
                         *ngIf="changePasswordForm.get('confirmPassword').hasError('minlength')">
                         The minimum length for this field is {{changePasswordForm.get('confirmPassword').errors.minlength.requiredLength}} characters.
                     </small>
+                    <small class="text-danger" *ngIf="(changePasswordForm.get('confirmPassword')?.dirty || changePasswordForm.get('confirmPassword')?.touched) && changePasswordForm.get('confirmPassword')?.value != changePasswordForm.get('newPassword')?.value">
+                      New Password and Confirm Password not matched
+                    </small>
                 </div>
           </div>
         </form>
-        <!-- <span class="invalid-feedback" *ngIf="changePasswordForm?.errors?.passwordMismatch">
-          New password and confirm password is not matched.
-        </span> -->
-      <button cButton color="light">Change Password</button>
+      <button cButton color="light" (click)="submit()">Change Password</button>
     </c-card-body>
   </c-card>
-
 </div>
