--- a/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/user-role/user-role.component.html
@@ -1,7 +1,11 @@
+
 <c-nav variant="tabs">
     <a [active]="true" [cTabContent]="tabContent" [routerLink] [tabPaneIdx]="0" cNavLink>User Role</a>
     <a [cTabContent]="tabContent" [routerLink] [tabPaneIdx]="1" cNavLink>Access Privilege</a>
   </c-nav>
+  <c-col xs="12">
+    <c-card class="mb-4"> 
+  
   <c-tab-content #tabContent="cTabContent">
     <c-tab-pane class="p-3">
         
@@ -162,3 +166,5 @@
       content visibility and styling. You can use it with tabs, pills, and any other .nav-powered navigation.
     </c-tab-pane>
   </c-tab-content>
+</c-card>
+</c-col>
