--- a/src/ui/internal-audit/src/app/views/private/security/access-privilege/access-privilege.component.html
+++ b/src/ui/internal-audit/src/app/views/private/security/access-privilege/access-privilege.component.html
@@ -18,11 +18,11 @@
                             <c-card-header>
                                 Password Length
                             </c-card-header>
-                            <c-card-body class="form-inline">
+                            <c-card-body class="form-inline" >
                                 <label for="minLength">Minimum Length :</label>
-                                <input id="minLength" name="minLength">
+                                <input id="minLength" type="number" formControlName="minLength" name="minLength">
                                 <label for="maxLength">Maximum Length :</label>
-                                <input id="maxLength" name="maxLength">
+                                <input id="maxLength" type="number" formControlName="maxLength" name="maxLength">
                             </c-card-body>
                         </c-card>
                     
@@ -35,11 +35,11 @@
                               <c-row><c-form-check>
 
                                 <!-- <span class="form-inline"> -->
-                                <input type="checkbox" name="alphabet" value="alphabet" onclick="onCheckAlphabet"/>                              
+                                <input type="checkbox" name="alphabet" value="alphabet" onclick="onCheckAlphabet" formControlName="isAlphabetMandatory">                              
                                 <label for="alphabet" class="m-1">Alphabet</label> <br>                                                                     
-                                <input type="checkbox" name="numeric" value="numeric">
+                                <input type="checkbox" name="numeric" value="numeric" formControlName='isNumberMandatory'>
                                 <label for="numeric" class="m-1"> Numeric</label><br>
-                                <input type="checkbox" name="specialChar" value="specialChar">
+                                <input type="checkbox" name="specialChar" value="specialChar" formControlName="isSpecialCharsMandatory">
                                 <label for="specialChar" class="m-1"> Special Character</label>
                               </c-form-check></c-row>            
                             </c-card-body>
@@ -58,25 +58,25 @@
                   <c-card-body >
                     <c-row><c-form-check>
                       <div >
-                      <input type="checkbox" name="noLogin" value="noLogin"/>
+                      <input type="checkbox" name="noLogin" value="noLogin" formControlName="isLockedOnNoLoginActivity">
                       <label for="noLogin" class="m-1">No login for 
-                        <input id="noLoginDays" name="noLoginDays" class="inline-textbox">
+                        <input id="noLoginDays" name="noLoginDays" class="inline-textbox" formControlName="noLoginActivityDays">
                         days (for this case account will be unlocked through authorized person)</label><br>
                       </div>
-                      <input type="checkbox" name="failedLogin" value="failedLogin" >
+                      <input type="checkbox" name="failedLogin" value="failedLogin" formControlName="isLockedOnFailedLoginAttempts">
                       <label for="failedLogin" class="m-1" >
                         Failed Login for 
-                        <input id="numberOfFailedLoginAttempts" name="numberOfFailedLoginAttempts" class="inline-textbox">
+                        <input id="numberOfFailedLoginAttempts" name="numberOfFailedLoginAttempts" class="inline-textbox" formControlName="numberOfFailedLoginAttempts">
                         times within
-                        <input id="failedLoginAttemptsDuration" name="failedLoginAttemptsDuration" class="inline-textbox">
+                        <input id="failedLoginAttemptsDuration" name="failedLoginAttemptsDuration" class="inline-textbox" formControlName="failedLoginAttemptsDuration">
                         minutes. Later user will be locked for next
-                        <input id="failedLoginLockedDuration" name="failedLoginLockedDuration" class="inline-textbox">
+                        <input id="failedLoginLockedDuration" name="failedLoginLockedDuration" class="inline-textbox" formControlName="failedLoginLockedDuration">
                         hour.                      
                       </label><br>
-                      <input type="checkbox" name="unlocking" value="unlocking"/>
+                      <input type="checkbox" name="unlocking" value="unlocking" formControlName="isUnlockedOnByAdmin">
                       <label for="unlocking" class="m-1"> 
                         Unlock Account
-                        <input id="unlockedByAdminDuration" name="unlockedByAdminDuration" class="inline-textbox">
+                        <input id="unlockedByAdminDuration" name="unlockedByAdminDuration" class="inline-textbox" formControlName="unlockedOnByAdminDuration">
                         minutes later (only applicable when user failed to login within configured time by configured number of attempt)
                       </label>
                     </c-form-check></c-row>
@@ -92,15 +92,15 @@
                   <c-card-body >
                     <c-row><c-form-check name="forcePasswordChange">
                      
-                      <input type="checkbox" name="firstLogin" value="firstLogin"/>
+                      <input type="checkbox" name="firstLogin" formControlName="isPasswordChangeForcedOnFirstLogin">
                       <label for="firstLogin" class="m-1">First Time Login </label><br>
                      
-                      <input type="checkbox" name="forceReset" value="forceReset" >
+                      <input type="checkbox" name="forceReset" formControlName="isPasswordResetForcedPeriodically">
                       <label for="forceReset" class="m-1" >
                         Force Reset After
-                        <input id="numberOfFailedLoginAttempts" name="numberOfFailedLoginAttempts" class="inline-textbox">
+                        <input type="number" id="forcePasswordResetDays" name="forcePasswordResetDays" class="inline-textbox" formControlName="forcePasswordResetDays">
                         days. Notify user prior
-                        <input id="notifyPasswordResetDays" name="notifyPasswordResetDays" class="inline-textbox">
+                        <input type="number" id="notifyPasswordResetDays" name="notifyPasswordResetDays" class="inline-textbox" formControlName="notifyPasswordResetDays">
                         days.                                          
                       </label><br>                      
                     </c-form-check></c-row>
@@ -115,7 +115,7 @@
                   </strong></c-card-header>
                   <c-card-body>
                     <label for="sessionDuration" class="m-1">Duration </label>
-                    <input id="sessionDuration" name="sessionDuration" class="inline-textbox">
+                    <input type="number" id="sessionDuration" name="sessionDuration" class="inline-textbox" formControlName="sessionPolicy_duration" name="sessionPolicy_duration">
                     minutes.
                   </c-card-body>
                 </c-card>
